[tool.poetry]
name = "flare"
version = "0.1.0"
description = ""
authors = ["isidoraq <isidora.tourni@sandboxquantum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rouge-score = "0.1.2"
evaluate = "0.2.2"
chardet = "5.1.0"
openai = "0.28"
datasets = "^2.19.2"
tqdm = "^4.66.4"
sacrebleu = "^2.4.2"
beautifulsoup4 = "4.11.2"
tenacity = "^8.3.0"
filelock = "^3.14.0"
spacy = "^3.7.5"
elasticsearch = "7.9.1"
torch = "^2.3.1"
beir = "^2.0.0"
tiktoken = "^0.7.0"
ratelimit = "^2.2.1"
flask = "^3.0.3"
diskcache = "^5.6.3"
requests = "^2.32.3"
threadpoolctl = "^3.5.0"
logger = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
